--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
         <div class="container-fluid">
-            <!-- <img src="/project/image/logo.png" style="margin-right: 40px; margin-left: 40px; width: 30px; height: 24px"> -->
+            <img src="/project/image/logo.png" style="margin-right: 40px; margin-left: 40px; width: 30px; height: 24px">
             <a class="navbar-brand" href="/">Movie</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -27,6 +27,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/add_movie/">Добавить фильм</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/register/">Регистрация</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login/">Авторизация</a>
                     </li>
                 </ul>
             </div>
